# LinearSolver

./: CMakeLists.txt  Driver.cpp  README.txt
Mat/: COOBuffer.hpp  Vector.cpp  Vector.hpp  csrmatric.cpp  csrmatric.hpp
iterativeSolver/: AMGSolver.hpp  GuassSiedelSolver.hpp  IterativeSolver.hpp  JacobiSolver.hpp  ParallelJacobiSolver.hpp
problems/: AnisotropicPoissonBVP2D.hpp  ConvectionDiffBVP2D.hpp  MultiscalePossion.hpp  RotatedAnisotropicBVP2D.hpp  csrstencil.hpp  problem.hpp
src/: .AMGSolver.hpp.swp  AMGCycle.hpp  AMGsetup.hpp  Interpolation.hpp  MeasureList.hpp  Multiplication.hpp  PreProcessing.hpp  RugeCoarsen.hpp  StrengthMatrix.hpp  Transpose.hpp
tests/: .TestDriver.cpp.swp  CMakeLists.txt  CSRMatricTest.cpp  TestDriver.cpp  VectorTest.cpp  iterativeSolverTest.hpp
